# currency-converter

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json
src/cur/: bootstrap.py
src/cur/adapters/: cache.py  clipboard.py  exchange_rate.py  exchange_rate_client.py
src/cur/core/: entity.py  parser.py
src/cur/entrypoints/: cli.py
src/cur/services/: conversion.py  parser.py
src/cur/utils/formatters/: korean_formatter.py  number_formatter.py
tests/functional/: test_cli.py
tests/integration/: test_exchange_rate_client.py
tests/unit/: test_cache.py  test_conversion_service.py  test_exchange_rate_client_with_cache.py  test_korean_formatter.py  test_number_formatter.py  test_parser.py
