[project]
name = "currency-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.2"
dependencies = [
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "cur"
