[project]
name = "currency-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.2"
dependencies = [
    "httpx>=0.28.1",
    "platformdirs>=4.0.0",
    "pyperclip>=1.9.0",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
cur = "cur.entrypoints.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "cur"
